# Financial-Data-Integration-Adapter

./: .dockerignore  .env.example  .gitignore  Architecture.md  README.md  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml
adapter/: Dockerfile  manage.py  requirements.txt
adapter/apps/loans/: admin.py  apps.py  models.py  serializers.py  views.py
adapter/apps/loans/management/commands/: seed_bank.py
adapter/apps/loans/migrations/: 0001_initial.py  0002_kategori_standardizasyon.py
adapter/apps/loans/services/: normalizer.py  sync_service.py  validator.py
adapter/config/: settings.py  test_settings.py  urls.py
api/: auth.py  main.py  requirements.txt
external_bank/: main.py  storage.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Data.jsx  Login.jsx  Profiling.jsx  Sync.jsx
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: lib.rs  main.rs  validation.rs
sample_data/teamsec-interview-data/: commercial_credit_masked.csv  commercial_payment_plan_masked.csv  retail_credit_masked.csv
tests/: conftest.py  requirements.txt  test_api.py  test_auth.py  test_e2e.py  test_memory_large.py  test_models.py  test_normalizer.py  test_sync_service.py  test_validator.py
